# Intent-Tracker

./: .env.example  .gitignore  README.md  SUBMISSION.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: scan.yml
.vercel/: project.json
apps/api/: main.py  solvers_data.py
apps/scanner/processing/: dedup.py  enrichment.py  matcher.py  narratives.py
apps/scanner/scanners/: base.py  blogs.py  coingecko.py  defillama.py  dune.py  github_scanner.py  google_news.py  onchain_dune.py  reddit.py  rss.py  twitter.py
apps/scanner/scheduler/: scheduler.py
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/discoveries/: page.tsx
apps/web/src/components/: animated-button.tsx  chain-logo.tsx  hero-bg.tsx  narratives-card.tsx  nav.tsx  project-card.tsx  project-logo.tsx  project-modal.tsx  stats-row.tsx  webgl-grid.tsx
apps/web/src/data/: solvers.json
apps/web/src/lib/: api.ts  supabase.ts  taxonomy.ts
config/: keywords.py  sources.py  twitter_seeds.py
data/: .gitkeep
data/seeds/: seed_projects.py
docs/: SECURITY_AUDIT.md  graph.md  narratives.md  onchain_scanner.md  twitter_scanner.md
scripts/: _env.sh  backfill_taxonomy.py  bootstrap.sh  export_snapshot.py  init_db.sh  migrate_sqlite_to_supabase.py  run_api.sh  run_scan.sh  sync_logos.sh  test_narratives_prompt.py  test_onchain_dune.py  test_twitter_scanner.py  twitter_login.py
supabase/: schema.sql
supabase/migrations/: 001_taxonomy.sql  002_onchain.sql  003_narratives.sql  004_graph.sql
(+6 files in other folders)
