[project]
name = "intent-tracker"
version = "0.2.0"
description = "OSINT tracker for intent-based DeFi protocols"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Data sources
    "praw>=7.7.1",
    "feedparser>=6.0.11",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Config / NLP
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "textblob>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "pip-audit>=2.7.0",
]

[tool.uv]
# Treat the repo as an application (no wheel build needed). Packages/apps are
# imported via PYTHONPATH set by scripts/_env.sh.
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "pip-audit>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "apps/web", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["S101"]  # allow asserts in tests

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
